# nionui

./: .travis.yml  Application.py  Binding.py  CHANGES.rst  CanvasItem.py  CanvasUI.py  Converter.py  DocumentController.py  DrawingContext.py  Geometry.py  GridCanvasItem.py  LICENSE.txt  ListCanvasItem.py  MANIFEST.in  Model.py  README.md  README.rst  Selection.py  Test.py  ThreadPool.py  TwistedWebSocketServer.py  meta.yaml  mypy.ini  pyproject.toml  setup.cfg  setup.py  test-requirements.txt
.github/workflows/: python-package.yml
docs/: Makefile  conf.py  defs.rst  index.rst  make.bat  requirements.txt
examples/basic/: Buttons.py  HelloWorld.py  MetadataEditor.py  canvas.py  drawing.py  main.py
nion/ui/: Application.py  Binding.py  Bitmap.py  CanvasItem.py  CanvasUI.py  Converter.py  Declarative.py  Dialog.py  DocumentController.py  DrawingContext.py  Event.py  Geometry.py  GridCanvasItem.py  GridFlowCanvasItem.py  ListCanvasItem.py  MouseTrackingCanvasItem.py  Observable.py  Persistence.py  PreferencesDialog.py  Process.py  PyQtProxy.py  QtUserInterface.py  Selection.py  Stream.py  Test.py  TestUI.py  ThreadPool.py  TreeCanvasItem.py  TwistedWebSocketServer.py  Unicode.py  UserInterface.py  Widgets.py  Window.py  __init__.py  command.py
nion/ui/html/: client.html
nion/ui/resources/: stylesheet.qss
nion/ui/test/: CanvasItem_test.py  Declarative_test.py  DrawingContext_test.py  GridCanvasItem_test.py  ListCanvasItem_test.py  Observable_test.py  Persistence_test.py  TestUI_test.py  Widgets_test.py  __init__.py
nionui/: __main__.py
nionui_app/: README
nionui_app/nionui_examples/canvas_demo/: main.py
nionui_app/nionui_examples/hello_world/: main.py
nionui_app/nionui_examples/ui_demo/: Bindings.py  Buttons.py  CheckBoxes.py  ComboBoxes.py  ComponentContent.py  ComponentLayout.py  ComponentPolymorphic.py  ComponentStack.py  Compositions.py  Converters.py  Dialog.py  Groups.py  LineEdits.py  ProgressBars.py  RadioButtons.py  Sections.py  Sliders.py  Stacks.py  StatusBar.py  Tabs.py  main.py
test/: Binding_test.py  Geometry_test.py  Observable_test.py
tools/: websocket.py
