[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nionui"
version = "10.2.2"
authors = [
    { name = "Nion Software", email = "swift@nion.com" }
]
description = "Nion UI framework."
readme = "README.rst"
requires-python = ">=3.12"
license = "Apache-2.0"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14"
]
urls = { "Homepage" = "https://github.com/nion-software/nionui" }
dependencies = [
  "imageio >=2.19.0",
  "nionutils >=4.14.0,<5.0.0",
  "numpy >=2.0,<3.0"
]

[project.scripts]
nionui = "nion.ui.command:main"

[tool.setuptools.packages.find]
include = ["nion", "nion.ui", "nion.ui.test", "nionui_app.none", "nionui_app.nionui_examples.hello_world", "nionui_app.nionui_examples.ui_demo", "nionui"]

[tool.setuptools.package-data]
"nion.ui" = ["resources/*", "py.typed"]

[tool.pytest.ini_options]
testpaths = [
    "nion/ui"
]
