[metadata]
name = nionui
version = 7.0.2
author = Nion Software
author_email = swift@nion.com
description = Nion UI framework.
long_description = file: README.rst, CHANGES.rst, LICENSE.txt
url = https://github.com/nion-software/nionui
license = Apache-2.0
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
packages = find_namespace:
python_requires = >=3.9
install_requires =
    imageio>=2.19.0
    nionutils>=0.4.7,<5.0.0
    numpy>=1.21,<2.0

[options.package_data]
nion.ui =
    resources/*
    py.typed

[options.entry_points]
console_scripts =
    nionui = nion.ui.command:main

[options.packages.find]
include =
    nion
    nion.ui
    nion.ui.test
    nionui_app.none
    nionui_app.nionui_examples.hello_world
    nionui_app.nionui_examples.ui_demo
